# argus_notification_msteams

./: .gitignore  Makefile  README.rst  UPGRADING.rst  constraints.txt  pyproject.toml  requirements-django32.txt  requirements-django40.txt  requirements-django41.txt  requirements-django42.txt  runtests.py  tox.ini
requirements/: base.txt
src/: argus_notification_msteams.py
tests/: test_msteams.py  test_settings.py
