[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "argus_notification_msteams"
authors = [{name = "Hanne Moa", email = "hanne.moa@sikt.no"}]
maintainers = [{name = "Hanne Moa", email = "hanne.moa@sikt.no"}]
dependencies = [
    "argus-server>=1.14.0",
    "pymsteams>=0.2",
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dynamic = ["version", "description"]
readme = "README.rst"

[project.optional-dependencies]
test = [
    "tox",
    "coverage",
]

[project.urls]
Home = "https://github.com/Uninett/argus_notification_msteams"
Source = "https://github.com/Uninett/argus_notification_msteams"
